--- a/html-css/bootstrap/activity.html
+++ b/html-css/bootstrap/activity.html
@@ -12,11 +12,11 @@
 
     <style>
         body {
-            margin: 20px;
+            margin: 50px;
         }
 
         .container {
-            margin: 10px;
+            padding: 0px;
         }
     </style>
 </head>
