added bootstrap commands

--- a/html-css/bootstrap/activity.html
+++ b/html-css/bootstrap/activity.html
@@ -25,13 +25,13 @@
     <h1>Header</h1>
 
     <div class="container">
-        <div class="row">
-            <div class="col">
+        <div class="row mb-4">
+            <div class="col border border-5 border-danger">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, id ducimus rem voluptatum beatae
                 consequatur cumque consequuntur at repellat ad ex aspernatur iure illo aliquid repellendus animi!
                 Aliquid, perferendis provident.
             </div>
-            <div class="col">
+            <div class="col fs-5">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur explicabo omnis dignissimos,
                 facilis pariatur voluptates sit. Fuga eveniet animi ipsum fugiat dignissimos molestiae, repudiandae
                 ducimus, iste voluptas vero quo.
@@ -43,9 +43,7 @@
             <div class="col"></div>
         </div>
 
-        <br>
-
-        <div class="row">
+        <div class="row mb-4">
             <div class="col">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, id ducimus rem voluptatum beatae
                 consequatur cumque consequuntur at repellat ad ex aspernatur iure illo aliquid repellendus animi!
@@ -75,8 +73,6 @@
                 fuga veniam autem illum. Praesentium, quam quibusdam ex unde fuga voluptatem ab at alias inventore quo?
             </div>
         </div>
-
-        <br>
 
         <div class="row">
             <div class="col">
