--- a/html-css/projects/resume-project.html
+++ b/html-css/projects/resume-project.html
@@ -14,6 +14,7 @@
             height: 200px;
             overflow: hidden;
             border-radius: 50%;
+            right: 450px;
         }
 
         .profilePic img {
@@ -29,8 +30,10 @@
             height: 300px;
         }
 
-        h3 {
-            
+        .leftHeading {
+            position: absolute;
+            left: 40px;
+            /* top: 30px; */
         }
     </style>
 </head>
@@ -39,7 +42,8 @@
     <main>
         <header>
             <div class="leftHeading">
-                <h3>Hello</h3>
+                <h3>Naim Abdullah</h3>
+                <h3>Test test</h3>
             </div>
             <div class="profilePic">
                 <img src="./images/IMG_2506.jpg" alt="profile" />
