--- a/javascript/introduction/index.html
+++ b/javascript/introduction/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Javascript Introduction</h1>
-    <script src="./index.js"></script>
+    <h1>Intro Assignment</h1>
+    <script src="./intro-assignment.js"></script>
 </body>
 
 </html>
