--- a/javascript/dom/dom.html
+++ b/javascript/dom/dom.html
@@ -14,6 +14,13 @@
         width: 120px;
         height: auto;
       }
+      form {
+        padding: 20px 0;
+      }
+      input, button {
+        padding: 10px;
+        width: 50%;
+      }
     </style>
   </head>
   <body>
@@ -52,6 +59,13 @@
     <article class="blog blogs">
       This is an example for className and classList
     </article>
+
+    <form action="#">
+        <input type="text" class="customerName" id="customerName">
+        <br>
+        <br>
+        <button type="submit" class="btn">Submit</button>
+    </form>
     <script src="dom.js"></script>
   </body>
 </html>
